--- a/blank.html
+++ b/blank.html
@@ -16,7 +16,7 @@ License: You must have a valid license purchased only from themeforest(the above
 
 	<!-- begin::Head -->
 	<head>
-		<base href="../../">
+		<base href="demo11/">
 		<meta charset="utf-8" />
 		<title>Metronic | Empty Page</title>
 		<meta name="description" content="Page with empty content">
